@@ -2,6 +2,13 @@ New in spot 2.11.5.dev  (not yet released)
 
   Nothing yet.
 
+  Bug fixes:
+
+  - Running command lines such as "autfilt input.hoa -o output-%L.hoa"
+    where thousands of different filenames can be created failed with
+    "Too many open files".  (Issue #534)
+
+
 New in spot 2.11.5  (2023-04-20)
 
   Bug fixes:
